--- a/css/menu.css
+++ b/css/menu.css
@@ -6,6 +6,9 @@
     padding: 0%;
     font-size: 14px;
 }
+.menu{
+    background-color: #F8F9FA;
+}
 nav.navbar {
     position: relative;
     display: block;
