--- a/pages/main/pagMenu/acessos/StyleAdm.css
+++ b/pages/main/pagMenu/acessos/StyleAdm.css
@@ -1,12 +1,8 @@
-@charset="utf-8";
-*{
-	padding: 0;
-	margin:0;
-}
+@charset "UTF-8";
 
 body{
-	font:14px Oswald, arial;
-	background: url('img/fundo_escuro.jpg') no-repeat top center fixed;
+	font:14px Roboto, arial;
+	/*background: url('img/fundo_escuro.jpg') no-repeat top center fixed;*/
 
 
 }
@@ -210,4 +206,10 @@ ul{
 #permissao .nomecompleto{
 	margin-top: 25px;
 	font:14px Oswald;
+}
+.ml-3{
+	padding: 10px;
+}
+.mt-3{
+	align-items: center;
 }
